# ballxworld

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  settings_logging.toml  update-wren.sh
.cargo/: config
bxw_terragen/: Cargo.toml
bxw_terragen/src/: continent.rs  lib.rs  main.rs  math.rs  supersimplex.rs
bxw_util/: Cargo.toml
bxw_util/src/: change.rs  debug_data.rs  direction.rs  lib.rs  math.rs  sparsevec.rs  taskpool.rs
bxw_util/src/collider/: mod.rs
bxw_world/: Cargo.toml  build.rs
bxw_world/schema/: world.capnp
bxw_world/src/: ecs.rs  generation.rs  itemregistry.rs  lib.rs  physics.rs  raycast.rs  registry.rs  stdgen.rs  voxregistry.rs  worldmgr.rs
bxw_world/src/blocks/: mod.rs  stdshapes.rs
bxw_world/src/entities/: player.rs
bxw_world/src/inventory/: mod.rs
bxw_world/src/storage/: mod.rs  schemas.rs  serializer.rs
bxw_world/src/storage/sql/: 00_conn_on_exit.sql  00_conn_pragmas.sql  01_initial_tables.sql
res/: manifest.toml
res/fonts/: LICENSE-CascadiaCode.txt  cascadia.fnt
res/shaders/: atmosphere.frag  atmosphere.frag.spv  atmosphere.vert  atmosphere.vert.spv  egui.frag.spv  egui.vert  egui.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv  voxel.frag  voxel.frag.spv  voxel.vert  voxel.vert.spv
res/textures/: TEXTURES-LICENSE.txt
src/: config.rs  main.rs  math.rs  util.rs  vk.rs
src/bus/: mod.rs
src/client/: config.rs  input.rs  main.rs  mod.rs  voxmesh.rs  vulkan.rs
src/client/render/: atmorender.rs  egui_ash_sdl.rs  mod.rs  resources.rs  ui.rs  vkhelpers.rs  voxmesh.rs  voxrender.rs  vulkan.rs
src/client/screens/: mod.rs  player_inventory.rs
src/client/shaders/: voxel.frag  voxel.vert
src/client/world/: mod.rs
src/network/: client.rs  mod.rs  protocol.rs  reliability.rs  server.rs
src/network/packets/: auth.rs  mod.rs
src/server/: main.rs  mod.rs  world.rs
src/world/: badgen.rs  ecs.rs  generation.rs  mod.rs  raycast.rs  registry.rs  stdgen.rs
src/world/blocks/: mod.rs
src/world/entities/: player.rs
vk-sync-rs-master/: Cargo.toml
vk-sync-rs-master/src/: cmd.rs  lib.rs
wren/: Cargo.toml  build.rs  wrapper.h
wren/src/: lib.rs
