[workspace]
members = ["bxw_util", "bxw_world"]
exclude = ["vk-sync-rs-master"]
resolver = "2"

[package]
name = "ballxworld"
version = "0.1.0"
authors = ["Jakub Szewczyk (kubasz)"]
license = "GPL-3.0-only"
repository = "https://github.com/kubasz/ballxworld"
keywords = ["gaming", "games", "voxel"]
categories = ["games"]
edition = "2018"

[dependencies]
erupt = "0.19"
ctrlc = { version = "3.1", features = ["termination"] }
egui = { version = "0.14" }
vk-mem-erupt = "0.2.3"
image = { version = "0.23", default-features = false, features = ["bmp", "png"] }
serde = { version = "1.0", features = ["derive"] } # Errors in macros if only in bxw_util, hence it's repeated here
slice-deque = "0.3"
num_enum = "0.5"
log4rs = { version = "1.0.0", features = ["all_components", "console_writer", "background_rotation", "config_parsing", "toml_format"] }
rpmalloc-sys = { version = "0.2.1", features = [] }
mio = { version = "0.7.13", features = ["os-poll", "net"] }
bxw_util = { path = "bxw_util" }
bxw_world = { path = "bxw_world" }
bxw_terragen = { path = "bxw_terragen" }

[dependencies.sdl2]
version = "0.34"
features = []

[features]
default = ["use-rpmalloc"]
use-rpmalloc = ["rpmalloc-sys/preload"]
profile-with-tracy = ["use-rpmalloc", "bxw_util/profile-with-tracy", "bxw_world/profile-with-tracy", "bxw_terragen/profile-with-tracy"]

[patch.crates-io]
packed_simd_2 = { git = 'https://github.com/JohnTitor/packed_simd.git', rev = '45d5347a0d2187c046a546a477d2a53111cd7713' }

[profile.dev]
opt-level = 2
debug-assertions = true
debug = 2

[profile.release]
debug = 1
opt-level = 3
codegen-units = 1
lto = "thin"
incremental = false
panic = "abort"
