[workspace]
members = ["bxw_util", "bxw_world"]
exclude = ["vk-sync-rs-master"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-only"
repository = "https://github.com/eigenraven/ballxworld"
keywords = ["gaming", "games", "voxel"]
categories = ["games"]
rust-version = "1.64.0"

[workspace.dependencies]
# Common
bytemuck = { version = "1.12", features = ["extern_crate_alloc", "extern_crate_std", "min_const_generics", "derive"] }
flume = { version = "0.10.14", default-features = false, features = ["eventual-fairness"] }
rand = { version = "0.8", features = ["nightly", "simd_support"] }
rand_distr = "0.4"
rand_xoshiro = "0.6"
rstar = "0.9"
nalgebra = { version = "0.31", features = ["convert-bytemuck"] }
glm = { version = "0.17", package = "nalgebra-glm" }
packed_simd = { version = "0.3.8", package = "packed_simd_2" }
simba = { version = "0.7", features = ["packed_simd"] }
thread_local_crate = { version = "1.1", package = "thread_local" }
smallvec = "1"
rayon = "1.5"
scopeguard = "1.1"
parking_lot = { version = "0.12", features = ["nightly"] }
divrem = "1"
num-traits = "0.2"
fnv = "1.0"
itertools = "0.10"
regex = "1.6"
smart-default = "0.6.0"
log = "0.4"
lru = "0.8"
lazy_static = "1.4"
num_cpus = "1.13"
blake3 = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.5"
rmp = "0.8"
rmp-serde = "1.0"
sodiumoxide = "0.2.7"
zstd = "0.11.1"
tracy-client = { version = "0.14", default-features = false, features = ["system-tracing", "context-switch-tracing", "sampling", "code-transfer", "only-localhost", "fibers"] }
# World
noise = "0.8"
rusqlite = { version = "0.28", features = ["bundled", "backup", "blob", "limits"] }
# BXW
bxw_util = { path = "bxw_util" }
bxw_world = { path = "bxw_world" }

[package]
name = "ballxworld"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
erupt = "0.22"
ctrlc = { version = "3.1", features = ["termination"] }
egui = { git = "https://github.com/emilk/egui.git", rev = "7b8c17042c56726facd01fbf2735a67341a34470" }
vk-mem-3-erupt = "0.3.0"
image = { version = "0.24", default-features = false, features = ["bmp", "png"] }
serde.workspace = true
slice-deque = "0.3"
smart-default.workspace = true
num_enum = "0.5"
log4rs = { version = "1.0.0", features = ["all_components", "console_writer", "background_rotation", "config_parsing", "toml_format"] }
rpmalloc-sys = { version = "0.2.1", features = [] }
mio = { version = "0.8.2", features = ["os-poll", "net"] }
backtrace = "0.3"
bxw_util = { path = "bxw_util" }
bxw_world = { path = "bxw_world" }
bxw_terragen = { path = "bxw_terragen" }

[dependencies.sdl2]
version = "0.35"
features = []

[features]
default = ["use-rpmalloc"]
use-rpmalloc = ["rpmalloc-sys/preload"]
profile-with-tracy = ["use-rpmalloc", "bxw_util/profile-with-tracy", "bxw_world/profile-with-tracy", "bxw_terragen/profile-with-tracy"]

[profile.dev]
opt-level = 2
debug-assertions = true
debug = 2

[profile.release]
debug = 1
opt-level = 3
codegen-units = 1
lto = "thin"
incremental = false
panic = "abort"
