[package]
name = "bxw_terragen"
version = "0.1.0"
authors = ["Jakub Szewczyk (kubasz)"]
license = "GPL-3.0-only"
repository = "https://github.com/kubasz/ballxworld"
edition = "2018"

[lib]
name = "bxw_terragen"
path = "src/lib.rs"

[[bin]]
name = "bxw_terragen_bin"
path = "src/main.rs"
required-features = ["images"]

[features]
default = []
images = ["image"]

[dependencies]
bxw_util = { path = "../bxw_util" }
bxw_world = { path = "../bxw_world" }
image = { version = "0.23", optional = true }
