[package]
name = "bxw_terragen"
version = "0.1.0"
authors = ["Jakub Szewczyk (kubasz)"]
license = "GPL-3.0-only"
repository = "https://github.com/kubasz/ballxworld"
edition = "2021"

[lib]
name = "bxw_terragen"
path = "src/lib.rs"

[[bin]]
name = "bxw_terragen_bin"
path = "src/main.rs"
required-features = ["images"]

[features]
default = []
images = ["image"]
profile-with-tracy = ["bxw_util/profile-with-tracy", "bxw_world/profile-with-tracy"]

[dependencies]
bxw_util = { path = "../bxw_util" }
bxw_world = { path = "../bxw_world" }
image = { version = "0.24", optional = true, default-features = false, features = ["bmp", "png"] }
