[package]
name = "bxw_terragen"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
edition = "2021"

[lib]
name = "bxw_terragen"
path = "src/lib.rs"

[[bin]]
name = "bxw_terragen_bin"
path = "src/main.rs"
required-features = ["images"]

[features]
default = []
images = ["image"]
profile-with-tracy = ["bxw_util/profile-with-tracy", "bxw_world/profile-with-tracy"]

[dependencies]
bxw_util.workspace = true
bxw_world.workspace = true
image = { version = "0.24", optional = true, default-features = false, features = ["bmp", "png"] }
