[package]
name = "bxw_util"
version = "0.1.0"
authors = ["Jakub Szewczyk (kubasz)"]
license = "GPL-3.0-only"
repository = "https://github.com/kubasz/ballxworld"
edition = "2018"

[dependencies]
bytemuck = { version = "1.4", features = ["extern_crate_alloc"] }
rand = { version = "0.8", features = ["nightly", "simd_support"] }
rand_distr = "0.4"
rand_xoshiro = "0.6"
rstar = "0.8"
nalgebra = "0.26"
glm = { version = "0.12", package = "nalgebra-glm" }
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
simba = { version = "0.4", features = ["packed_simd"] }
toml_edit = "0.2"
thread_local_crate = { version = "1.0", package = "thread_local" }
smallvec = "1"
rayon = "1.5"
scopeguard = "1.1"
parking_lot = { version = "0.11", features = ["nightly"] }
divrem = "1"
num-traits = "0.2"
fnv = "1.0"
itertools = "0.10"
regex = "1.5"
log = "0.4"
lru = "0.6"
lazy_static = "1.4"
num_cpus = "1.13"
blake3 = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rmp = "0.8"
rmp-serde = "0.15"
sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide.git", rev = "f067482076597a03c957f2260100fbe709c9a475" }
zstd = "0.8"

tracy-client = { version = "0.12.0", default-features = false, features = ["delayed-init"] }

[features]
default = []
profile-with-tracy = ["tracy-client/enable"]
