[package]
name = "bxw_util"
version = "0.1.0"
authors = ["Jakub Szewczyk (kubasz)"]
license = "GPL-3.0-only"
repository = "https://github.com/kubasz/ballxworld"
edition = "2018"

[dependencies]
bytemuck = { version = "1.9", features = ["extern_crate_alloc", "extern_crate_std", "min_const_generics", "derive"] }
flume = { version = "0.10.8", default-features = false, features = ["eventual-fairness"] }
rand = { version = "0.8", features = ["nightly", "simd_support"] }
rand_distr = "0.4"
rand_xoshiro = "0.6"
rstar = "0.9"
nalgebra = { version = "0.30", features = ["convert-bytemuck"] }
glm = { version = "0.16", package = "nalgebra-glm" }
packed_simd = { version = "0.3.6", package = "packed_simd_2" }
simba = { version = "0.7", features = ["packed_simd"] }
toml_edit = "0.14"
thread_local_crate = { version = "1.0", package = "thread_local" }
smallvec = "1"
rayon = "1.5"
scopeguard = "1.1"
parking_lot = { version = "0.12", features = ["nightly"] }
divrem = "1"
num-traits = "0.2"
fnv = "1.0"
itertools = "0.10"
regex = "1.5"
log = "0.4"
lru = "0.7"
lazy_static = "1.4"
num_cpus = "1.13"
blake3 = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.5"
rmp = "0.8"
rmp-serde = "1.0"
sodiumoxide = "0.2.7"
zstd = "0.11.1"

tracy-client = { version = "0.12.0", default-features = false, features = ["delayed-init"] }

[features]
default = []
profile-with-tracy = ["tracy-client/enable"]
