[package]
name = "bxw_util"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
bytemuck.workspace = true
flume.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_xoshiro.workspace = true
rstar.workspace = true
nalgebra.workspace = true
glm.workspace = true
packed_simd.workspace = true
simba.workspace = true
toml_edit.workspace = true
thread_local_crate.workspace = true
smallvec.workspace = true
rayon.workspace = true
scopeguard.workspace = true
parking_lot.workspace = true
divrem.workspace = true
num-traits.workspace = true
fnv.workspace = true
itertools.workspace = true
regex.workspace = true
log.workspace = true
lru.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
blake3.workspace = true
serde.workspace = true
toml.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
sodiumoxide.workspace = true
zstd.workspace = true

tracy-client.workspace = true

[features]
default = []
profile-with-tracy = ["tracy-client/enable"]
